--- a/monamedia/monamedia/Areas/Admin/Views/AHome/AccountManage.cshtml
+++ b/monamedia/monamedia/Areas/Admin/Views/AHome/AccountManage.cshtml
@@ -18,6 +18,9 @@
     .safe {
         color: red;
     }
+   
+
+
 </style>
 @model List<monamedia.Models.Account>
 <main class="main">
@@ -101,7 +104,7 @@
                                 <td>@account.role</td>
                                 <td class="table-td-center">
                                     <button class="btn btn-primary details-button" type="button" data-bs-toggle="modal" data-bs-target="#detailModal" data-account-id="@account.accountID"
-                                            style="background-color: white; ">
+                                            style="background-color: white; margin-left:20px;">
 
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-three-dots" viewBox="0 0 16 16" style="background-color:white">
                                             <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3" />
