--- a/monamedia/monamedia/Areas/Admin/Views/AHome/Import.cshtml
+++ b/monamedia/monamedia/Areas/Admin/Views/AHome/Import.cshtml
@@ -84,8 +84,11 @@
                                     <td>@import.status</td>
                                     <td class="table-td-center">
                                         <button class="btn btn-primary btn-sm detail" data-bs-toggle="modal" data-bs-target="#detailModal" title="Chi tiết" id="show-emp" data-importid="@import.importID"
-                                                style="background-color: rgb(251, 226, 197); ">
-                                            Chi tiết
+                                                style="background-color: white; margin-left:20px;">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-three-dots" viewBox="0 0 16 16" style="background-color:white;">
+                                                <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3" />
+                                            </svg>
+                                            <i class="fas fa-edit"></i>
                                         </button>
                                     </td>
                                 </tr>
